        - Don't require C3 for the MRO test (rafl)
        - Bump MX::Emulate::CAF prereq to support list assignment (rafl)
        - Remove useless column in chained action debug table. (rafl)
        - namespace::clean related cleanups (rafl)
        - Import related cleanups and consistency fixes (rafl)
        - Fix test suite TestApp /dump/env action (t0m)

5.8000_06 2009-02-04 21:00
        - Disallow writing to config after setup (rafl)
        - Disallow calling setup more than once (rafl)
        - Documentation fix regarding overloading of Engine and Dispatcher
          instances (rafl)
        - Several documentation typo fixes (rafl)
        - Stop Makefile.PL from warning about versions that fixed a conflict
          (t0m)
        - Improved upgrading documentation (t0m, rafl)
        - Seed the RNG in each FastCGI child process (Andrew Rodland)
        - Properly report dynamic bind port for the development server (rafl)
          (Closes RT#38544)
        - Use the way documented by IO::Socket::INET to get the error message
          after trying to create a listening socket (rafl) (Closes RT#41828)
        - Don't ignore SIGCHLD while handling requests with the dev server
          (rafl) (Closes RT#42962)

5.8000_05 2008-29-01 00:00
        - Text::SimpleTable's go as wide as $ENV{COLUMNS} (jhannah)
          Patch written by Oleg Kostyuk <cub.uanic@gmail.com>
        - Improve docs for visit (mateu)
        - Add docs for finalize hook (dhoss)
        - Added ru/ua translations to error page
        - Improve the clarity and verbosity of the warning when component
          resolution uses regex fallback. (jhannah)
        - Handle leading CRLF in HTTP requests sometimes sent by IE6 in 
          keep-alive requests. (andyg)
        - Fixes for FastCGI with IIS 6.0 (janus)
        - Passing request method exported by Catalyst::Test an extra
          parameter used to be ignored, but started breaking if the parameter